storage/maria/ma_recovery.c
@@ -3521,6 +3521,14 @@ void _ma_tmp_disable_logging_for_table(MARIA_HA *info,
 {
   MARIA_SHARE *share= info->s;
   DBUG_ENTER("_ma_tmp_disable_logging_for_table");
+
+  /*
+    We have to ensure that bitmap is flushed, as it's checking
+    that share->now_transactional is set
+  */
+  if (share->now_transactional && share->data_file_type == BLOCK_RECORD)
+    _ma_bitmap_flush_all(share);
+
   if (log_incomplete)
   {
     uchar log_data[FILEID_STORE_SIZE];
